move flushMode to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,5 @@
 # Bot Token
 token = 2060607324:AAE5iuIQiW7XkCALG9ZFsbjKxG1-UMWS10Q
+
+# flushMode // Set to true to ignore all old message then rerun with this option set to false
+flushMode = false
