--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,5 +21,8 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+    - name: Upload
+      uses: actions/upload-artifact@v2.2.4
+      with:
+        name: credit
+        path: credit
